after monday pc-b

--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -14,16 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr54f6bab3.RGB"
+       "com.twosigma.beaker.javash.bkr7b0f996c.RGB"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,16 +39,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr54f6bab3.Point"
+       "rgb(33,10,127)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RGB color = new RGB(33,10,127);\n",
+    "return color.toString();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr7b0f996c.Point"
+      ]
+     },
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr54f6bab3.ShapeObj"
+       "com.twosigma.beaker.javash.bkr7b0f996c.ShapeObj"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr54f6bab3.CircObj"
+       "com.twosigma.beaker.javash.bkr7b0f996c.CircObj"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +168,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' />\n",
+      "<circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' />\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec7cb478-7bed-498b-b16e-233c3e4590ec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "method": "display_data"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import com.twosigma.beakerx.widget.*;\n",
+    "\n",
+    "RGB red = new RGB(255,0,0);\n",
+    "\n",
+    "CircObj c1 = new CircObj(40, new Point( 50, 50), red);\n",
+    "\n",
+    "System.out.println( c1.toSVG() );\n",
+    "System.out.println( c1.toString() );\n",
+    "\n",
+    "HTML widget = new HTML();\n",
+    "String sgv =\n",
+    "    \"<svg width='300' height='300' style='border:solid 1px'>\"\n",
+    "    + c1 +\n",
+    "    \"</svg>\";\n",
+    "widget.setValue(\"<div>\"+sgv+\"</div>\");\n",
+    "return widget; // 그림에 나타나는 것과 맞는지 시각적으로 확인해 볼 수 있도록 toSVG를 정의한 것이다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +234,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c93dc962-a7d4-4071-a32b-a87a54c11143",
+       "model_id": "8011cb78-ed5e-46b0-a7b4-054db0ba9a09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -220,9 +286,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr54f6bab3.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr54f6bab3.ShapeObj\u001b[0;0m",
-      "\u001b[0;31m class RectObj extends ShapeObj { int w; int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7b0f996c.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr7b0f996c.ShapeObj\u001b[0;0m",
+      "\u001b[0;31m class RectObj extends ShapeObj {  int w;  int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                  ^ \u001b[0;0m"
      ]
     }
    ],
@@ -243,7 +309,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "336918c6-d1a1-46ac-a250-92d4a7e44cb6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "method": "display_data"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "// 직사각형 toSGV 만들기 위한 힌트\n",
+    "\n",
+    "import com.twosigma.beakerx.widget.*;\n",
+    "\n",
+    "RGB color = new RGB(255,0,0);\n",
+    "\n",
+    "HTML widget = new HTML();\n",
+    "\n",
+    "widget.setValue(\"<svg width='300' height='300' style='border:solid 1px'>\"\n",
+    "               + \"<rect x='100' y='70' width='40' height='100' style='stroke:black; stroke-width:1; fill:\"+color+\"; opacity:0.33' />\"\n",
+    "              + \"</svg>\");\n",
+    "\n",
+    "return widget;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -251,9 +351,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr54f6bab3.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr54f6bab3.ShapeObj\u001b[0;0m",
-      "\u001b[0;31m class RTriObj extends ShapeObj { Point p; int w; int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                         ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7b0f996c.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr7b0f996c.ShapeObj\u001b[0;0m",
+      "\u001b[0;31m class RTriObj extends ShapeObj {  Point p;  int w;  int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                            ^ \u001b[0;0m"
      ]
     }
    ],
@@ -269,8 +369,16 @@
     "    // ...\n",
     "    // ...\n",
     "    // ...\n",
-    "\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "삼각형 SVG 힌트는 https://www.w3schools.com/graphics/svg_polygon.asp\n",
+    "\n",
+    "수학 관련 Java 라이브러리 https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/lang/Math.html"
    ]
   },
   {
@@ -285,16 +393,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr54f6bab3.Shape"
+       "com.twosigma.beaker.javash.bkr7b0f996c.Shape"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,16 +431,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr54f6bab3.Circle"
+       "com.twosigma.beaker.javash.bkr7b0f996c.Circle"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +491,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "745fe002-97f9-4380-80c8-bbe34c7b073e",
+       "model_id": "bc2cdb99-0aec-4e39-a2b5-d878c3b4806e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -439,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -447,9 +555,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr54f6bab3.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr54f6bab3.Point,com.twosigma.beaker.javash.bkr54f6bab3.Obj) in com.twosigma.beaker.javash.bkr54f6bab3.Shape\u001b[0;0m",
-      "\u001b[0;31m class Rectangle extends Shape { int w; int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                               ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7b0f996c.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr7b0f996c.Point,com.twosigma.beaker.javash.bkr7b0f996c.Obj) in com.twosigma.beaker.javash.bkr7b0f996c.Shape\u001b[0;0m",
+      "\u001b[0;31m class Rectangle extends Shape {  int w;  int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                 ^ \u001b[0;0m"
      ]
     }
    ],
@@ -464,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -472,9 +580,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr54f6bab3.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr54f6bab3.Point,com.twosigma.beaker.javash.bkr54f6bab3.Obj) in com.twosigma.beaker.javash.bkr54f6bab3.Shape\u001b[0;0m",
-      "\u001b[0;31m class RTriangle extends Shape { int w; int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                               ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7b0f996c.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr7b0f996c.Point,com.twosigma.beaker.javash.bkr7b0f996c.Obj) in com.twosigma.beaker.javash.bkr7b0f996c.Shape\u001b[0;0m",
+      "\u001b[0;31m class RTriangle extends Shape { int w;  int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                ^ \u001b[0;0m"
      ]
     }
    ],
@@ -486,6 +594,13 @@
     "    // Circle처럼 나머지를 완성하라    \n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -507,7 +622,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.3"
+   "version": "11.0.1"
   },
   "toc": {
    "base_numbering": 1,
