--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr4701f774.RGB"
+       "com.twosigma.beaker.javash.bkr43a2eee6.RGB"
       ]
      },
      "execution_count": 1,
@@ -29,11 +29,12 @@
     }
    ],
    "source": [
-    "class RGB {\n",
-    "    int r, g, b;\n",
+    "class RGB { // 색깔 클래스\n",
+    "    int r, g, b; // 빛의 3원색인 빨강/초록/파랑 각각을 0~255의 값으로 하는 인스턴스 변수들\n",
     "    RGB() { r=0; g=0; b=0; }\n",
     "    RGB(int _r, int _g, int _b) { r=_r; g=_g; b=_b; }\n",
-    "    @Override public String toString() { return \"rgb(\"+r+\",\"+g+\",\"+b+\")\"; }\n",
+    "    @Override\n",
+    "    public String toString() { return \"rgb(\"+r+\",\"+g+\",\"+b+\")\"; }\n",
     "}"
    ]
   },
@@ -66,10 +67,31 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr4701f774.Point"
+       "rgb(33,10,127)"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RGB color = new RGB(33,10,127);\n",
+    "return color;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr43a2eee6.Point"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,6 +108,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`toString`을 오버라이딩하지 않으면 `Object`에서 정의된 기본 정의대로 동작한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr43a2eee6.Point@4fac4bc5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Point p = new Point(12,23);\n",
+    "return p.toString();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr43a2eee6.Point@3173b808"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Point p = new Point(12,23);\n",
+    "return p;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 첫번째 설계\n",
     "* `CircObj`, `RectObj`, `RTriObj` 클래스 작성 (3점)\n",
     "* 같은 클래스의 인스턴스끼리 (`CircObj`끼리, `RectObj`끼리, `RTriObj`) 충돌 검사 테스트 사례 작성 및 각 테스트 사례를 svg 출력으로 확인 (3점)\n",
@@ -94,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr4701f774.ShapeObj"
+       "com.twosigma.beaker.javash.bkr43a2eee6.ShapeObj"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,17 +194,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`ShapeObj`를 상속받아 구체적 모양의 물건 클래스를 정의할 때는 다음 네 메소드를 오버라이딩해야 하며, 추가로 적절한 생성자(constructor)도 정의해 주어야 한다.\n",
+    "* `Point closest(Point p)`\n",
+    "   * 물건 안의 점 중 넘겨받은 점 `p`와 가장 가까운 점을 돌려준다.\n",
+    "   * 좌표가 소수점으로 나올 때는 소수점 이하를 적절히 (버림/반올림/올림 등) 처리해 정수 좌표로 변환해 돌려주어야 할 것이다.\n",
+    "   * 너무 복잡하게 피타고라스 정리 싸인 코사인 이런거 하려 하지 말고 도형의 닮음같이 초등학교 때 배웠던 개념이나 `x`축과 `y`축 좌표를 따로 분리해서 생각해보는 방법으로 최대한 간단한 방법이 없나 먼저 고민해 보아도 좋다.\n",
+    "   * 넘겨받은 점`p`가 만약 물건 안에 위치한 점이라면\n",
+    "     바로 그 넘겨받은 점 `p`의 값이 이 메소드가 계산해서 돌려줘야 할 값이 된다는 것에 주목하라.\n",
+    "* `boolean collides(Point p)`\n",
+    "   * 넘겨받은 점 `p`가 물건 안에 위치한 점인지 판별하는 메소드이다. 즉 물건 안에 있는 점이 넘어오면 `true`를 아니면 `false`를 계산한다.\n",
+    "   * 힌트: 위 `closest` 메소드를 이용하면 쉽게 정의할 수 있지만 다른 독창적인 방법으로 작성해도 무방하다.\n",
+    "* `boolean collides(ShapeObj o)`\n",
+    "   * 넘겨받은 물건 `o`가 지금 이 물건과 충돌하는지 판별하는 메소드이다.\n",
+    "   * 힌트: 위의 두 메소드를 이용하면 비교적 쉽게 정의할 수 있지만 다른 독창적인 방법으로 작성해도 무방하다. \n",
+    "* `String toSVG()`\n",
+    "   * 물건의 위치와 모양 등 특성에 맞게 svg형식의 태그 내용의 문자열을 계산하는 메소드이다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr4701f774.CircObj"
+       "com.twosigma.beaker.javash.bkr43a2eee6.CircObj"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -176,13 +268,14 @@
      "output_type": "stream",
      "text": [
       "<circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' />\n",
+      "<circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' />\n",
       "<circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' />\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd078260-5952-4a0c-b497-e13a1632cd5f",
+       "model_id": "e0a84997-707f-47bd-9cc9-4a2b6865723e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,6 +294,7 @@
     "\n",
     "System.out.println( c1.toSVG() );\n",
     "System.out.println( c1.toString() );\n",
+    "System.out.println( c1 );\n",
     "\n",
     "HTML widget = new HTML();\n",
     "String sgv =\n",
@@ -213,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +328,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce10e577-ebd9-49f1-b110-b897d4878bbf",
+       "model_id": "b5de3447-679f-4953-9698-2e75dd252060",
        "version_major": 2,
        "version_minor": 0
       },
@@ -278,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -286,9 +380,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr4701f774.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr4701f774.ShapeObj\u001b[0;0m",
-      "\u001b[0;31m class RectObj extends ShapeObj {  int w;  int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                  ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr43a2eee6.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr43a2eee6.ShapeObj\u001b[0;0m",
+      "\u001b[0;31m class RectObj extends ShapeObj { int w; int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                ^ \u001b[0;0m"
      ]
     }
    ],
@@ -309,13 +403,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee886be7-0a7d-4e9a-81d1-3738c2d4c3dc",
+       "model_id": "8b0074ff-2b5c-4dea-a1f9-7e2b5db92bc4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -351,9 +445,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr4701f774.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr4701f774.ShapeObj\u001b[0;0m",
-      "\u001b[0;31m class RTriObj extends ShapeObj {  Point p;  int w;  int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                            ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr43a2eee6.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr43a2eee6.ShapeObj\u001b[0;0m",
+      "\u001b[0;31m class RTriObj extends ShapeObj { Point p; int w; int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                         ^ \u001b[0;0m"
      ]
     }
    ],
@@ -393,16 +487,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr4701f774.Shape"
+       "com.twosigma.beaker.javash.bkr43a2eee6.Shape"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,16 +525,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr4701f774.Circle"
+       "com.twosigma.beaker.javash.bkr43a2eee6.Circle"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +585,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22e7a292-d6bb-418b-bbc5-6530aabc3115",
+       "model_id": "9753d86e-c094-42fb-a70e-43d69a50d142",
        "version_major": 2,
        "version_minor": 0
       },
@@ -547,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -555,9 +649,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr4701f774.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr4701f774.Point,com.twosigma.beaker.javash.bkr4701f774.Obj) in com.twosigma.beaker.javash.bkr4701f774.Shape\u001b[0;0m",
-      "\u001b[0;31m class Rectangle extends Shape {  int w;  int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                 ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr43a2eee6.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr43a2eee6.Point,com.twosigma.beaker.javash.bkr43a2eee6.Obj) in com.twosigma.beaker.javash.bkr43a2eee6.Shape\u001b[0;0m",
+      "\u001b[0;31m class Rectangle extends Shape { int w; int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
     }
    ],
@@ -572,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -580,9 +674,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr4701f774.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr4701f774.Point,com.twosigma.beaker.javash.bkr4701f774.Obj) in com.twosigma.beaker.javash.bkr4701f774.Shape\u001b[0;0m",
-      "\u001b[0;31m class RTriangle extends Shape { int w;  int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr43a2eee6.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr43a2eee6.Point,com.twosigma.beaker.javash.bkr43a2eee6.Obj) in com.twosigma.beaker.javash.bkr43a2eee6.Shape\u001b[0;0m",
+      "\u001b[0;31m class RTriangle extends Shape { int w; int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
     }
    ],
@@ -615,7 +709,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.1"
+   "version": "11.0.3"
   },
   "toc": {
    "base_numbering": 1,
