--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr43a2eee6.RGB"
+       "com.twosigma.beaker.javash.bkr82757878.RGB"
       ]
      },
      "execution_count": 1,
@@ -88,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr43a2eee6.Point"
+       "com.twosigma.beaker.javash.bkr82757878.Point"
       ]
      },
      "execution_count": 4,
@@ -119,7 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr43a2eee6.Point@4fac4bc5"
+       "com.twosigma.beaker.javash.bkr82757878.Point@49fd01d8"
       ]
      },
      "execution_count": 5,
@@ -140,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr43a2eee6.Point@3173b808"
+       "com.twosigma.beaker.javash.bkr82757878.Point@265b71e"
       ]
      },
      "execution_count": 6,
@@ -171,7 +171,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr43a2eee6.ShapeObj"
+       "com.twosigma.beaker.javash.bkr82757878.ShapeObj"
       ]
      },
      "execution_count": 7,
@@ -222,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr43a2eee6.CircObj"
+       "com.twosigma.beaker.javash.bkr82757878.CircObj"
       ]
      },
      "execution_count": 8,
@@ -275,7 +275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0a84997-707f-47bd-9cc9-4a2b6865723e",
+       "model_id": "a8885606-f38d-4c30-987b-a5e72a292fac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,7 +328,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5de3447-679f-4953-9698-2e75dd252060",
+       "model_id": "add12a89-09d7-4a2b-8a3f-0f45a2f8ee07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -380,7 +380,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr43a2eee6.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr43a2eee6.ShapeObj\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr82757878.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr82757878.ShapeObj\u001b[0;0m",
       "\u001b[0;31m class RectObj extends ShapeObj { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                                ^ \u001b[0;0m"
      ]
@@ -409,7 +409,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b0074ff-2b5c-4dea-a1f9-7e2b5db92bc4",
+       "model_id": "53f6406c-4c41-47b7-bfbb-d565eef02e86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -445,7 +445,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr43a2eee6.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr43a2eee6.ShapeObj\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr82757878.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr82757878.ShapeObj\u001b[0;0m",
       "\u001b[0;31m class RTriObj extends ShapeObj { Point p; int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                                         ^ \u001b[0;0m"
      ]
@@ -493,7 +493,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr43a2eee6.Shape"
+       "com.twosigma.beaker.javash.bkr82757878.Shape"
       ]
      },
      "execution_count": 14,
@@ -531,7 +531,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr43a2eee6.Circle"
+       "com.twosigma.beaker.javash.bkr82757878.Circle"
       ]
      },
      "execution_count": 15,
@@ -585,7 +585,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9753d86e-c094-42fb-a70e-43d69a50d142",
+       "model_id": "3c285834-b0b5-4ce0-9669-ae89ff1983fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -649,7 +649,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr43a2eee6.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr43a2eee6.Point,com.twosigma.beaker.javash.bkr43a2eee6.Obj) in com.twosigma.beaker.javash.bkr43a2eee6.Shape\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr82757878.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr82757878.Point,com.twosigma.beaker.javash.bkr82757878.Obj) in com.twosigma.beaker.javash.bkr82757878.Shape\u001b[0;0m",
       "\u001b[0;31m class Rectangle extends Shape { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
@@ -674,7 +674,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr43a2eee6.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr43a2eee6.Point,com.twosigma.beaker.javash.bkr43a2eee6.Obj) in com.twosigma.beaker.javash.bkr43a2eee6.Shape\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr82757878.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr82757878.Point,com.twosigma.beaker.javash.bkr82757878.Obj) in com.twosigma.beaker.javash.bkr82757878.Shape\u001b[0;0m",
       "\u001b[0;31m class RTriangle extends Shape { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
@@ -1012,6 +1012,26 @@
        "visible": true
       }
      },
+     "3c285834-b0b5-4ce0-9669-ae89ff1983fa": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_d11ff517-07f2-45cd-afd1-6c494b3f000e",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div><div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
      "465ccc8d-e62a-4c2e-ad99-d0c0ddcf7108": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "*",
@@ -1090,7 +1110,56 @@
        "top": ""
       }
      },
+     "53f6406c-4c41-47b7-bfbb-d565eef02e86": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_6931e27d-3e2c-4dc6-babf-a1679436d999",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<svg width='300' height='300' style='border:solid 1px'><rect x='100' y='70' width='40' height='100' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg>",
+       "visible": true
+      }
+     },
      "55da30c0-4f1b-4205-9bf9-859be6eb0b52": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
+     "6931e27d-3e2c-4dc6-babf-a1679436d999": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
       "model_name": "LayoutModel",
@@ -1315,6 +1384,35 @@
        "top": ""
       }
      },
+     "a0ba46d0-d656-4d2a-991b-133fdb476eba": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
      "a35a0059-c145-4876-bade-44f47faeda34": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "*",
@@ -1364,6 +1462,26 @@
        "top": ""
       }
      },
+     "a8885606-f38d-4c30-987b-a5e72a292fac": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_a0ba46d0-d656-4d2a-991b-133fdb476eba",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
      "a9035b58-b3af-4269-acaa-9aac5e1e3c4d": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
@@ -1391,6 +1509,55 @@
        "padding": "",
        "right": "",
        "top": ""
+      }
+     },
+     "aa42d558-e256-41f0-a847-5311590f60bb": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
+     "add12a89-09d7-4a2b-8a3f-0f45a2f8ee07": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_aa42d558-e256-41f0-a847-5311590f60bb",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
+       "visible": true
       }
      },
      "ae05cffc-483d-47bd-955c-d5f7efe84e2a": {
@@ -1636,6 +1803,35 @@
        "placeholder": "",
        "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
        "visible": true
+      }
+     },
+     "d11ff517-07f2-45cd-afd1-6c494b3f000e": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
       }
      },
      "d19b0f52-b1a7-416e-9963-fe6d6dcf6289": {
