--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr82757878.RGB"
+       "com.twosigma.beaker.javash.bkrbbba71d8.RGB"
       ]
      },
      "execution_count": 1,
@@ -88,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr82757878.Point"
+       "com.twosigma.beaker.javash.bkrbbba71d8.Point"
       ]
      },
      "execution_count": 4,
@@ -119,7 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr82757878.Point@49fd01d8"
+       "com.twosigma.beaker.javash.bkrbbba71d8.Point@291f079e"
       ]
      },
      "execution_count": 5,
@@ -140,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr82757878.Point@265b71e"
+       "com.twosigma.beaker.javash.bkrbbba71d8.Point@7a3f8c7"
       ]
      },
      "execution_count": 6,
@@ -171,7 +171,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr82757878.ShapeObj"
+       "com.twosigma.beaker.javash.bkrbbba71d8.ShapeObj"
       ]
      },
      "execution_count": 7,
@@ -201,7 +201,6 @@
     "* `Point closest(Point p)`\n",
     "   * 물건 안의 점 중 넘겨받은 점 `p`와 가장 가까운 점을 돌려준다.\n",
     "   * 좌표가 소수점으로 나올 때는 소수점 이하를 적절히 (버림/반올림/올림 등) 처리해 정수 좌표로 변환해 돌려주어야 할 것이다.\n",
-    "   * 너무 복잡하게 피타고라스 정리 싸인 코사인 이런거 하려 하지 말고 도형의 닮음같이 초등학교 때 배웠던 개념이나 `x`축과 `y`축 좌표를 따로 분리해서 생각해보는 방법으로 최대한 간단한 방법이 없나 먼저 고민해 보아도 좋다.\n",
     "   * 넘겨받은 점`p`가 만약 물건 안에 위치한 점이라면\n",
     "     바로 그 넘겨받은 점 `p`의 값이 이 메소드가 계산해서 돌려줘야 할 값이 된다는 것에 주목하라.\n",
     "* `boolean collides(Point p)`\n",
@@ -222,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr82757878.CircObj"
+       "com.twosigma.beaker.javash.bkrbbba71d8.CircObj"
       ]
      },
      "execution_count": 8,
@@ -275,7 +274,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8885606-f38d-4c30-987b-a5e72a292fac",
+       "model_id": "367a8a82-b6be-465a-9b46-b204dd4bfe7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,7 +327,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "add12a89-09d7-4a2b-8a3f-0f45a2f8ee07",
+       "model_id": "e49983be-2534-441e-ae4c-7fecc0aed68c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -380,7 +379,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr82757878.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr82757878.ShapeObj\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrbbba71d8.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkrbbba71d8.ShapeObj\u001b[0;0m",
       "\u001b[0;31m class RectObj extends ShapeObj { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                                ^ \u001b[0;0m"
      ]
@@ -409,7 +408,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53f6406c-4c41-47b7-bfbb-d565eef02e86",
+       "model_id": "5bacd305-3283-454e-a886-4366f5b7ea8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -445,7 +444,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr82757878.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr82757878.ShapeObj\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrbbba71d8.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkrbbba71d8.ShapeObj\u001b[0;0m",
       "\u001b[0;31m class RTriObj extends ShapeObj { Point p; int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                                         ^ \u001b[0;0m"
      ]
@@ -493,7 +492,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr82757878.Shape"
+       "com.twosigma.beaker.javash.bkrbbba71d8.Shape"
       ]
      },
      "execution_count": 14,
@@ -531,7 +530,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr82757878.Circle"
+       "com.twosigma.beaker.javash.bkrbbba71d8.Circle"
       ]
      },
      "execution_count": 15,
@@ -585,7 +584,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c285834-b0b5-4ce0-9669-ae89ff1983fa",
+       "model_id": "abf677db-3873-4e6e-808d-48b8fc0c5ca2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -649,7 +648,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr82757878.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr82757878.Point,com.twosigma.beaker.javash.bkr82757878.Obj) in com.twosigma.beaker.javash.bkr82757878.Shape\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrbbba71d8.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkrbbba71d8.Point,com.twosigma.beaker.javash.bkrbbba71d8.Obj) in com.twosigma.beaker.javash.bkrbbba71d8.Shape\u001b[0;0m",
       "\u001b[0;31m class Rectangle extends Shape { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
@@ -674,7 +673,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr82757878.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr82757878.Point,com.twosigma.beaker.javash.bkr82757878.Obj) in com.twosigma.beaker.javash.bkr82757878.Shape\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrbbba71d8.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkrbbba71d8.Point,com.twosigma.beaker.javash.bkrbbba71d8.Obj) in com.twosigma.beaker.javash.bkrbbba71d8.Shape\u001b[0;0m",
       "\u001b[0;31m class RTriangle extends Shape { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
@@ -992,6 +991,26 @@
        "top": ""
       }
      },
+     "367a8a82-b6be-465a-9b46-b204dd4bfe7d": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_502e64e2-5793-4a73-b8e5-aef56c1f2969",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
      "36ea8805-dea4-4173-a55a-b01e7a03d993": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "*",
@@ -1053,6 +1072,35 @@
       }
      },
      "47466f2d-9d48-4f03-a504-2dca0cb4f336": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
+     "502e64e2-5793-4a73-b8e5-aef56c1f2969": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
       "model_name": "LayoutModel",
@@ -1159,6 +1207,26 @@
        "top": ""
       }
      },
+     "5bacd305-3283-454e-a886-4366f5b7ea8f": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_dce042b7-27ec-439a-be92-1c9e63555f61",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<svg width='300' height='300' style='border:solid 1px'><rect x='100' y='70' width='40' height='100' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg>",
+       "visible": true
+      }
+     },
      "6931e27d-3e2c-4dc6-babf-a1679436d999": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
@@ -1235,6 +1303,35 @@
        "placeholder": "",
        "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
        "visible": true
+      }
+     },
+     "7035f3e9-408e-470e-a399-bee1073861d8": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
       }
      },
      "745fe002-97f9-4380-80c8-bbe34c7b073e": {
@@ -1540,6 +1637,26 @@
        "top": ""
       }
      },
+     "abf677db-3873-4e6e-808d-48b8fc0c5ca2": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_7035f3e9-408e-470e-a399-bee1073861d8",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div><div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
      "add12a89-09d7-4a2b-8a3f-0f45a2f8ee07": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "*",
@@ -1676,6 +1793,35 @@
        "placeholder": "",
        "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
        "visible": true
+      }
+     },
+     "c465f703-2c16-42f8-b157-64de07b76ad6": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
       }
      },
      "c7b5ea2a-8e86-4899-9a1c-4d0915f67fa5": {
@@ -1932,6 +2078,35 @@
        "top": ""
       }
      },
+     "dce042b7-27ec-439a-be92-1c9e63555f61": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
      "dd078260-5952-4a0c-b497-e13a1632cd5f": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "*",
@@ -1949,6 +2124,26 @@
        "msg_throttle": 3,
        "placeholder": "",
        "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
+     "e49983be-2534-441e-ae4c-7fecc0aed68c": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_c465f703-2c16-42f8-b157-64de07b76ad6",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
        "visible": true
       }
      },
